Make JRE1.4 compatible
git-svn-id: http://argouml.tigris.org/svn/argouml/trunk@10974 a161b567-7d1e-0410-9ef9-912c70fedb3f